@@ -1,21 +1,37 @@
 # GET Command Generator
 from pysnmp.entity.rfc3413.oneliner import cmdgen
 
-errorIndication, errorStatus, \
-                 errorIndex, varBinds = cmdgen.CommandGenerator().getCmd(
+cmdGen = cmdgen.CommandGenerator()
+
+errorIndication, errorStatus, errorIndex, varBinds = cmdGen.getCmd(
     # SNMP v1
 #    cmdgen.CommunityData('public', mpModel=0),
-    # SNMP v2
-    cmdgen.CommunityData('public'),
-    # SNMP v3
-#    cmdgen.UsmUserData('test-user', 'authkey1', 'privkey1'),
-    # Transport options
+    # SNMP v2c
+#    cmdgen.CommunityData('public'),
+    # SNMP v3:
+    # auth MD5, privacy DES
+    cmdgen.UsmUserData('test-user', 'authkey1', 'privkey1'),
+    # auth MD5, privacy NONE
+#    cmdgen.UsmUserData('test-user', 'authkey1'),
+    # auth NONE, privacy NONE
+#    cmdgen.UsmUserData('test-user'),
+    # auth SHA, privacy AES128
+#    cmdgen.UsmUserData('test-user', 'authkey1', 'privkey1',
+#                       authProtocol=cmdgen.usmHMACSHAAuthProtocol,
+#                       privProtocol=cmdgen.usmAesCfb128Protocol ),
+    # Transport options:
+    # IPv4/UDP
     cmdgen.UdpTransportTarget(('localhost', 161)),
+    # IPv6/UDP
 #    cmdgen.Udp6TransportTarget(('::1', 161)),
+    # Local (UNIX) domain socket
 #    cmdgen.UnixTransportTarget('/tmp/snmp-agent'),
-    # Plain OID
+    # Objects to query:
+    # OID in tuple form
     (1,3,6,1,2,1,1,1,0),
-    # ((mib-name, mib-symbol), instance-id)
+    # OID in string form
+    '1.3.6.1.2.1.1.6.0',
+    # MIB symbol: ((mib-name, mib-symbol), instance-id)
     (('SNMPv2-MIB', 'sysObjectID'), 0)
     )
 
